[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-browser-agent"
version = "0.1.0"
description = "A browser agent CLI tool named Jarvis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click",
    "langchain-openai",
    "python-dotenv",
    "browser-use",
]

[project.scripts]
jarvis = "runner:jarvis"
